--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "parcel": "^2.14.4"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^6.21.2",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "tailwindcss": "^4.1.5"
   }
 }
